<resources>
    <string name="app_name">الحياة طوارئ</string>
    <string name="title_home"></string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_profile">My profile</string>
    <string name="title_booking">Booking</string>
    <string name="loading">Loadin...</string>
    <string name="title_welcome">Welcome</string>
    <string name="search_for_doctor">Search for you docotor directly</string>
    <string name="title_emegancy_call">Emergency</string>
    <string name="tittle_call">Call</string>
    <string name="title_find_doctor">Find doctor  with speciality</string>
    <string name="title_book">Book</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_hayet">HayattID : </string>
    <string name="title_name">Name</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_age">Age</string>
    <string name="title_gender">Gender</string>
    <string name="title_address">Address</string>
    <string name="title_updateProfile">Uppdate profile</string>
    <string name="title_allhayat">Alhayatt</string>
    <string name="title_welcome_back">Welcome back</string>
    <string name="title_login_your_account">Login To Your Account</string>
    <string name="title_password">Password</string>
    <string name="title_dontHaveAccount">Do not have account ?</string>
    <string name="title_signup">Signup</string>
    <string name="title_or_login">OR LOGIN WITH</string>
    <string name="title_forget_pass">Forget Password ?</string>
    <string name="title_login">login</string>
    <string name="title_top_doctor">Top Doctor</string>
    <string name="title_search_date">Search By Date</string>
    <string name="title_specility">Select Speciality</string>
    <string name="title_date">Select Date</string>
    <string name="title_feature_doc">Featured doctors</string>
    <string name="title_search">Search</string>
    <string name="title_book_new_appointment">Book New Appointment</string>
    <string name="title_main_spec">Main Speciality</string>
    <string name="tittle_see_all">See all reviews</string>
    <string name="title_visit_time">Visiting time</string>
    <string name="title_about">About</string>
    <string name="title_book_appointment">Book Appointment</string>
    <string name="title_hint_name">Type your name</string>
    <string name="title_hint_mobile">Type your mobile</string>
    <string name="title_hint_age">Type your age</string>
    <string name="title_hint_gender">Type your gender</string>
    <string name="title_complaint">Your Complain</string>
    <string name="title_hint_complain">Type your complain</string>
    <string name="title_confirm_booking">Booking Confirmed</string>
    <string name="title_time">Time</string>
    <string name="title_done">Done</string>
    <string name="title_my_appointment">My Appointment</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="title_visited">Visited</string>
    <string name="title_cancelled">Cancelled</string>

    <string name="facebook_app_id">952902735204712</string>
    <string name="fb_login_protocol_scheme">fb952902735204712</string>
    <string name="title_email">email</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="field_required">Filed required</string>
    <string name="password_is_short">Password is short</string>
    <string name="confirmPassword_not_match">Confirm password does not match</string>
    <string name="tittle_confirm">Confirm</string>
    <string name="title_activity_maps">Map</string>
    <string name="save_success">Save success</string>
    <string name="title_attachment">Attachments</string>
    <string name="enterHayatId">Please enter hayat ID</string>
    <string name="thereIsNoFileSelected">No file slected</string>
    <string name="invalidemail">Invalid email</string>
    <string name="invalidPhone">Invalid phone</string>
</resources>