<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_files"
        android:title="@string/title_attachment" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/ic_notification"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_booking"
        android:icon="@mipmap/ic_booking"
        android:title="@string/title_booking" />
</menu>