<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quantum_ic_arrow_back_grey600_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationZ="@dimen/_10sdp"

            android:id="@+id/back"
            android:padding="@dimen/_10sdp"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/mypridero_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/title_book_new_appointment"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="90dp"
            android:layout_height="90dp"

            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/white"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_profile"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Dr/Amr"
            android:fontFamily="@font/mypridero_bold"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:id="@+id/nameDoctor"
            app:layout_constraintTop_toBottomOf="@id/profile" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/back_solid_color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:translationZ="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:scrollbars="none"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/nameDoctor">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/contentData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/small_green_box"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_name" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/mypridero_regular"
                        android:text="@string/title_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/title_hint_name"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="#CCCCCC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/small_green_box"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_phone" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/mypridero_regular"
                        android:gravity="center"
                        android:text="@string/title_mobile"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/title_hint_mobile"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="#CCCCCC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/small_green_box"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_age" />
                    </LinearLayout>

                    <TextView
                        android:fontFamily="@font/mypridero_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/title_age"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/title_hint_age"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="#CCCCCC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/small_green_box"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_gender" />
                    </LinearLayout>

                    <TextView
                        android:fontFamily="@font/mypridero_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/title_gender"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/title_hint_gender"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="#CCCCCC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/small_green_box"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/user"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <TextView
                        android:fontFamily="@font/mypridero_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/title_complaint"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/complain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/title_hint_complain"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="#CCCCCC" />

                <Button
                    android:id="@+id/book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAllCaps="false"
                    android:fontFamily="@font/mypridero_regular"
                    app:layout_constraintTop_toBottomOf="@id/contentData"
                    android:background="@drawable/back_gradient_solid"
                    android:text="@string/title_book_appointment"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>