<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        tools:context=".ui.search.SearchActivity">

        <TextView
            android:fontFamily="@font/mypridero_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/title_welcome" />

        <TextView
            android:fontFamily="@font/mypridero_semi"
            android:id="@+id/userName"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_16sdp"
            android:text="Naeme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/back_round_border"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="false"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/mypridero_regular"
                android:hint="@string/search_for_doctor" />


        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSpecilist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            tools:listitem="@layout/item_speciality" />

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/_17sdp"
            android:text="@string/title_top_doctor"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"
            android:fontFamily="@font/mypridero_bold"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_height="wrap_content"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            tools:listitem="@layout/item_doctor" />
    </LinearLayout>

</layout>